[package]
name = "rust_coinlive"
version = "0.1.0"
edition = "2021"
# Add description and license metadata
description = "A short description of what your package does"
license = "MIT"

# Optional: Add authors if needed
authors = ["Thien Tran<fcduythien@gmail.com"]

# Optional: Add other metadata
repository = "https://github.com/duythien/rust_coinlive"
readme = "README.md"
[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored_json = "5.0.0"
prettytable = "0.10.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros", "net", "rt-multi-thread", "io-util", "io-std"] }
yansi = "1.0.1"
